--- a/webpage.html
+++ b/webpage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="header">
+<div class="header" style="justify-content: space-between;">
     <div class="logo">
         <img src="sit pune.png" alt="Logo">
     </div>
